tests/fsharp/typecheck/sigs/neg57.fs
module M

[<Struct>]
type Foo<'T> =
   val offset : int
   new (x:'T) = { offset = 1 } 
